--- a/unified_env.yml
+++ b/unified_env.yml
@@ -6,7 +6,7 @@ channels:
   - defaults
 dependencies:
   - python=3.10
-  
+    
   # 1. NEW PYTORCH (Satisfies LLaVA)
   - pytorch=2.4.0
   - torchvision=0.19.0
@@ -48,3 +48,5 @@ dependencies:
       - spacy
       - huggingface_hub  
       - tqdm
+      - flashy
+      - datasets
